<resources>
    <string name="app_name">PoPQuiz</string>

    <!--profile screen -->
    <string name="user_name">User Name</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender</string>
    <string name="specify_male_female">Specify Male/Female</string>
    <string name="highscores">HighScores</string>
    <string name="play">Play</string>
    <string name="how_to_play">how to play</string>
    <string name="instructions">There is a 10 seconds timer for every question.
        \n\n
        Wrong answer or failing to answer in stipulated time will deduct 10 points and correct
        answer will add 20 points + seconds left from timer.
        \n\nEg: If a person answers in 4 seconds,
        points to be credited would be 20(Correct answer point) + 6(seconds left before correct answer was selected)</string>
    <string name="welcome_note">Welcome to POPQUIZ,\nLets Play</string>
    <string name="name_empty">Player name can\'t be empty</string>
    <string name="age_error">enter age</string>
    <string name="gender_error">Specify gender</string>

    <!-- quiz screen -->
    <string name="score">Score</string>
    <string name="max_score">150</string>
    <string name="time">Time</string>
    <string name="ten">10</string>
    <string name="dummy_question">The first Buddhist Sangeeti (conference) was held at?</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>

    <!-- high score screen -->
    <string name="high_scores">High Scores</string>
    <string name="player_name">player name</string>

</resources>
