<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.initishbhatt.popquiz.presentation.profile.ProfileContract.Presenter" />

        <variable
            name="model"
            type="com.initishbhatt.popquiz.presentation.profile.ProfileBindingModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shrine">


        <TextView
            android:id="@+id/user_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="@dimen/space_large"
            android:text="@string/user_name"
            app:layout_constraintEnd_toStartOf="@+id/user_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_player_name"
            android:inputType="text"
            android:padding="@dimen/space_large"
            android:text="@={model.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/user_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_name_label" />


        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_large"
            android:text="@string/age"
            app:layout_constraintBaseline_toBaselineOf="@+id/age_text"
            app:layout_constraintEnd_toStartOf="@+id/age_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/age_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_age"
            android:inputType="number"
            android:text="@={model.age}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/age_label"
            app:layout_constraintTop_toBottomOf="@+id/user_name_text" />


        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_large"
            android:text="@string/gender"
            app:layout_constraintBaseline_toBaselineOf="@+id/gender_text"
            app:layout_constraintEnd_toStartOf="@+id/gender_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/gender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/specify_male_female"
            android:inputType="number"
            android:text="@={model.gender}"
            app:layout_constraintBottom_toTopOf="@id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gender_label"
            app:layout_constraintTop_toBottomOf="@+id/age_text" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_button"
            android:enabled="@{model.playerDetailAvailable}"
            android:onClick="@{()-> presenter.onPlayClick(model)}"
            android:text="@string/play"
            app:layout_constraintBottom_toTopOf="@id/how_to_play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_text" />

        <Button
            android:id="@+id/high_score_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:onClick="@{()-> presenter.onHighScoreClick()}"
            android:text="@string/highscores"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/how_to_play_button" />

        <Button
            android:id="@+id/how_to_play_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:onClick="@{()-> presenter.onHowToPlayClick()}"
            android:text="@string/how_to_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />


    </android.support.constraint.ConstraintLayout>
</layout>